--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -4,16 +4,26 @@ permalink: /year-archive/
 title: "Blog posts"
 author_profile: true
 redirect_from:
-  - /wordpress/blog-posts/
+- /wordpress/blog-posts/
 ---
+
+<p>You can also find my articles on
+  <a href="https://www.baeldung.com/author/abdullahiadinoyiibrahim" target="_blank">
+    my Baeldung profile
+  </a>.
+</p>
+
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% include archive-single.html %}
+{% unless post.categories contains 'news' %}
+
+{% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+{% if year != written_year %}
+<h2 id="{{ year | slugify }}" class="archive__subtitle">{{ }}</h2>
+{% capture written_year %}{{ 2025 }}{% endcapture %}
+{% endif %}
+{% include archive-single.html %}
+{% endunless %}
 {% endfor %}
