--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,22 +7,59 @@ redirect_from:
 - /wordpress/blog-posts/
 ---
 
-<p>You can also find my articles on
+<!-- Section 1: Medium articles -->
+<h2>Medium Articles</h2>
+<p>
+  Browse all my Medium posts at
+  <a href="https://medium.com/@abdullahiadinoyi857" target="_blank">
+    my Medium profile
+  </a>.
+</p>
+<ul class="archive__item-list" style="margin-left:0; padding-left:0; list-style:none;">
+  {% assign medium_posts = site.posts
+  | where_exp: "p", "p.link contains 'medium.com'"
+  | sort: "date"
+  | reverse %}
+  {% for post in medium_posts %}
+  {% include archive-single.html %}
+  {% endfor %}
+</ul>
+
+<hr />
+
+<!-- Section 2: Baeldung articles -->
+<h2>Baeldung Articles</h2>
+<p>
+  I also publish tutorials on Baeldung—see them here:
   <a href="https://www.baeldung.com/author/abdullahiadinoyiibrahim" target="_blank">
     my Baeldung profile
   </a>.
 </p>
+<ul class="archive__item-list" style="margin-left:0; padding-left:0; list-style:none;">
+  {% assign baeldung_posts = site.posts
+  | where_exp: "p", "p.link contains 'baeldung.com'"
+  | sort: "date"
+  | reverse %}
+  {% for post in baeldung_posts %}
+  {% include archive-single.html %}
+  {% endfor %}
+</ul>
 
+<hr />
 
+<!-- Section 3: Other posts grouped by year (excludes news, Medium & Baeldung) -->
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
+{% capture written_year %}None{% endcapture %}
 {% for post in site.posts %}
-{% unless post.categories contains 'news' %}
-
+{% unless
+post.categories contains 'news'
+or post.link contains 'medium.com'
+or post.link contains 'baeldung.com'
+%}
 {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
 {% if year != written_year %}
-<h2 id="{{ year | slugify }}" class="archive__subtitle">{{ }}</h2>
-{% capture written_year %}{{ 2025 }}{% endcapture %}
+<h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
+{% capture written_year %}{{ year }}{% endcapture %}
 {% endif %}
 {% include archive-single.html %}
 {% endunless %}
